--- a/spring-boot-hybernate-thymeleaf-teknikservis-project/src/main/resources/application.properties
+++ b/spring-boot-hybernate-thymeleaf-teknikservis-project/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://192.168.174.131:5432/TEKNIK
-spring.datasource.username=postgres
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:postgresql:access connection adress
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
@@ -8,7 +8,7 @@ logging.pattern.console=%msg%n
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=never
 
-spring.security.user.name = tuba
+spring.security.user.name = user1
 spring.security.user.password = 1234
 
-image.location = C://Nexon/
+image.location = C://img/
