--- a/spring-boot-hybernate-thymeleaf-teknikservis-project/pom.xml
+++ b/spring-boot-hybernate-thymeleaf-teknikservis-project/pom.xml
@@ -7,7 +7,7 @@
 		<version>2.7.1</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bilgeadam</groupId>
+	<groupId>com.myjavaproject1</groupId>
 	<artifactId>spring-boot-teknikservis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-teknikservis</name>
